# mlflow-enterprise-platform

./: .gitignore  README.md  env-setup.sh  pyproject.toml  train.py
.sonarlint/: connectedMode.json
azure_training/: README.md  conda_dependencies.yml  data_processor.py  inference_example.py  model_trainer.py  submit_job.py  train.py
data/metadata/: adult_metadata.json  unique_values.json
kubernetes/: ClusterServingRuntime-mlflow.yaml  README.md  azure-resource-provisioning.sh  mlflow-runtime.yaml  mlflow-values.yaml  model_deploy.yaml
model_serving/: Dockerfile  pyproject.toml
model_training/: README.md  README_HYPERPARAMETER_TUNING.md  README_TUNING.md  __init__.py  data_processor.py  inference_example.py  mlflow_inference_examples.md  model_trainer.py  model_tuner.py  requirements.txt  submit_job.py  submit_tune_job.py  train.py  transform_visualization.py  tune.py
model_training/hyperparameter_configs/: logistic_regression.json  minimal_example.yaml  multi_model.yaml  quick_example.yaml  random_forest.yaml  test_parallel.yaml  xgboost-quick.yaml  xgboost.yaml
notebook/: adult-classification.ipynb  adult.ipynb  california_housing-regression.ipynb  california_housing.ipynb  experimentation.ipynb
