[tool.poetry]
name = "mlflow-iris-example"
version = "0.1.0"
description = ""
authors = ["VLTSankalpa <wltsankalpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
mlflow = {extras = ["extras"], version = "^2.21.3"}
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
azure-storage-blob = "^12.25.1"
azure-identity = "^1.21.0"
dotenv = "^0.9.9"
xgboost = "^3.0.0"
psutil = "^7.0.0"
hyperopt = "^0.2.7"
shap = "^0.47.1"
ucimlrepo = "^0.0.7"
scikit-optimize = "^0.10.2"
tensorflow = "2.18.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.4.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
